# taffy-layout

./: CHANGELOG.md  Cargo.toml  LICENSE  README.ja-JP.md  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  typedoc.json  vitest.config.ts
docs/: about-taffy.md  index.md  intro.md
docs/advanced/: debugging.md  error-handling.md  index.md  performance.md
docs/api/: index.md
docs/classes/: Layout.md  Style.md  TaffyError.md  TaffyTree.md
docs/cookbook/: flex-row-cards.md  grid-dashboard.md  holy-grail-layout.md  index.md  media-card.md  sticky-footer.md
docs/core-concepts/: index.md  measure-functions.md  objects-layout.md  objects-style.md  objects-taffy-tree.md  overview.md  size-and-space.md
docs/enumerations/: AlignContent.md  AlignItems.md  AlignSelf.md  BoxSizing.md  Display.md  FlexDirection.md  FlexWrap.md  JustifyContent.md  Overflow.md  Position.md  TextAlign.md
docs/functions/: default.md  initSync.md
docs/getting-started/: building-trees.md  computing-layouts.md  configuration.md  index.md  installation.md  quick-start.md
docs/interfaces/: DetailedGridInfo.md  DetailedGridItemsInfo.md  DetailedGridTracksInfo.md  InitOutput.md  Point.md  Rect.md  Size.md
docs/styling/: align-content.md  align-items.md  align-self.md  aspect-ratio.md  border.md  display.md  flex-basis-grow-shrink.md  flex-basis.md  flex-direction.md  flex-grow.md  flex-shrink.md  flex-wrap.md  gap.md  grid-auto-flow.md  grid-column.md  grid-placement.md  grid-row.md  grid-templates.md  grid.md  index.md  inset.md  justify-content.md  margin-padding-border.md  margin.md  overflow.md  padding.md  position.md  size.md
docs/type-aliases/: AvailableSpace.md  DetailedGridItemsInfo.md  DetailedGridTracksInfo.md  DetailedLayoutInfo.md  Dimension.md  GridPlacement.md  GridTemplateArea.md  InitInput.md  LayoutPropertyArrayValues.md  LengthPercentage.md  Line.md  Point.md  (+7 more)
scripts/: generate-example-tests.ts  patch-dts.ts
src/: enums.rs  error.rs  index.ts  layout.rs  lib.rs  style.rs  tree.rs  types.rs  typescript.rs  utils.rs
tests/: layout.test.ts  preamble.ts  style.test.ts  utils.ts
(+318 files in other folders)
